small fixes: - remove "loom" from menu - add last saved time to filename hover - Save -> Save As - add separators to numbers - autoscroll to bottom of editor on node rendering - make stop emoji inline rather than truncating summary

--- a/src/main.css
+++ b/src/main.css
@@ -1083,6 +1083,7 @@ table.keys td:nth-child(2) {
 .finish-reason {
   color: var(--text-secondary);
   font-size: var(--font-size-sm);
+  margin-right: 2px !important;
 }
 
 #node-summary {
